# lovebug

./: .gitmodules  BUILD.md  CMakeLists.txt  README.md  build_and_install.ps1  build_scripts.ps1  deploy-scripts-and-run.ps1  install_mod.ps1  vcpkg-configuration.json  vcpkg.json
config_default/: Cargo.toml
config_default/src/: bp70.rs  main.rs
deploy/Data/: Lovebug.esp
deploy/Data/F4SE/Plugins/Lovebug/: Settings.json
deploy/Data/F4SE/Plugins/Lovebug/Actions/: BodyParts.json  DD.json  Default.json  Penetration.json
deploy/Data/F4SE/Plugins/Lovebug/Triggers/: BP70.json  Default.json
deploy/Data/SKSE/Plugins/Lovebug/triggers/: MilkMod.json  devious_devices.json
deploy/Data/Scripts/Source/User/: LB_Native.psc  Lb_AnimationBridge.psc  Lb_EventBridge.psc  Lb_EventBridge_AAF.psc  Lb_EventBridge_DD.psc  Lb_ExternalEvents.psc  fallout4.ppj
deploy/Data/Source/Scripts/: Lb_Bridge.psc  Lb_EventBridge_AAF.psc  Lb_EventBridge_DD.psc  Lb_ExternalEvents.psc  Lb_Main.psc  Lb_Native.psc  Lb_OnGameLoad.psc  Lovebug_Native.psc
rust/: .gitignore  Cargo.toml  build.rs
rust/config/: Cargo.toml
rust/config/src/: find.rs  lib.rs  triggers.rs
rust/src/: Bones.h  Bridge.cpp  Bridge.h  Events.cpp  Events.h  Tasks.cpp  Tasks.h  bones.rs  events.rs  lib.rs  logging.rs  settings.rs
src/: Bones.cpp  Events.cpp  Logs.cpp  Native.cpp  PCH.h  Plugin.cpp
