[package]
name = "lbug"
version = "0.0.1"
edition = "2021"

[lib]
name = "lovebug"
crate-type = ["staticlib", "rlib"]

[dependencies]
config = { path = "./config" }
bp_scheduler = { path = "./bp_scheduler" }
buttplug = "7.1.13"
anyhow = "1.0.68"
cxx = "1.0.95"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
crossbeam-channel = " 0.5.1"
lazy_static = "1.4.0"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
futures-util = "0.3.30"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
